<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="unit">Cm</string>
    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">0</string>
    <string name="metricfeet">0</string>
    <string name="metricinch">0</string>
    <string name="metricweight">0</string>
    <string name="textWeight">0</string>
    <string name="textAge">0</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="bmi">BMI</string>
    <string name="back">RETURN</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <string name="gender_not_selected">Please select a gender</string>
</resources>