<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientblue"
    android:scaleType="matrix"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/centerhorizontalline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/centerverticalline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"></RelativeLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/intro"
        android:scaleType="fitCenter"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="25dp"
        />

    <android.widget.Button
        android:id="@+id/standard"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="550dp"
        android:background="@drawable/circlebutton"
        android:fontFamily="@font/raleway"
        android:text="standard"
        android:textColor="#040b42"
        android:textSize="15sp"
        android:textStyle="bold"></android.widget.Button>

    <android.widget.Button
        android:id="@+id/metric"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="215dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="550dp"
        android:background="@drawable/circlebutton2"
        android:fontFamily="@font/raleway"
        android:text="metric"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"></android.widget.Button>

    <RelativeLayout
        android:id="@+id/heightlayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerhorizontalline"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-5dp"
        android:background="@drawable/cardbackgroung">

        <TextView
            android:id="@+id/textHeight2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="#040b42"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/raleway"
            android:text="@string/unit"
            android:textColor="#040b42"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textHeight1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#040b42"
            android:ems="2"
            android:fontFamily="@font/raleway"
            android:maxLength="3"
            android:text="@string/startingheight"
            android:textAlignment="center"
            android:textColor="#040b42"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/calculatebmi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/circlebutton"
        android:fontFamily="@font/raleway"
        android:text="@string/calculate_your_bmi"
        android:textColor="#040b42"
        android:textSize="15sp"
        android:textStyle="bold">
    </android.widget.Button>

    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">

        <TextView
            android:id="@+id/textweight1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="#040b42"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus"/>

        <EditText
            android:id="@+id/textWeight2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/black"
            android:ems="2"
            android:fontFamily="@font/raleway"
            android:maxLength="3"
            android:text="@string/textWeight"
            android:textAlignment="center"
            android:textColor="#040b42"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/raleway"
            android:text="Kg"
            android:textColor="#040b42"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Age"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">

        <TextView
            android:id="@+id/textage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="#040b42"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus"/>

        <EditText
            android:id="@+id/textAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/black"
            android:ems="2"
            android:fontFamily="@font/raleway"
            android:maxLength="3"
            android:text="@string/textAge"
            android:textAlignment="center"
            android:textColor="#040b42"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/checkclass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="680dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/raleway"
        android:text="Check bmi classification"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        >
    </TextView>

    <RelativeLayout
        android:id="@+id/dropdownLayout"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/cardbackgroung"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/obsclass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:text="Obesity: BMI 30 or higher"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/owclass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:text="Overweight: BMI between 25 and 29.9"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/nwclass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:text="Normal weight: BMI between 18.5 and 24.9"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/uwclass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:layout_marginTop="130dp"
            android:text="Underweight: BMI less than 18.5"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>